# Local-Lens

./: .gitignore  Cargo.toml  README.md  download-models.sh  install.sh  local_lens.desktop  package.sh
.github/workflows/: release.yml
docs/: index.html  style.css
src/: app.rs  db.rs  main.rs  ml.rs  ocr.rs  processing.rs  scanner.rs
website/: script.js
