[package]
name = "local_lens"
version = "0.1.1"
edition = "2026"

[dependencies]
image = "0.25"
rusqlite = { version = "0.31", features = ["bundled"] }
ort = { version = "2.0.0-rc.9", features = ["fetch-models"] }
eframe = "0.27"
egui = "0.27"
egui_extras = { version = "0.27", features = ["all_loaders"] }
walkdir = "2.5"
anyhow = "1.0"
open = "5"
rfd = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
oar-ocr = "0.5.2"
